# agentboard

./: .env.example  .gitignore  BLOG_POST.md  Cargo.toml  README.md  agentboard.toml.example  build.rs
discord-bot/: README.md  bot.py  hello.py  matrix.py  matrix_multiply.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: PlanCard.svelte  StatusBadge.svelte  TeamCard.svelte  TerminalOutput.svelte  VoiceButton.svelte
frontend/src/lib/: api.js  stores.js  voice.js  ws.js
frontend/src/routes/: Home.svelte  Pair.svelte  Plan.svelte  Settings.svelte  Summary.svelte  Team.svelte
frontend/static/: manifest.json
src/: auth.rs  config.rs  lib.rs  main.rs  shutdown.rs  state.rs
src/agent/: mod.rs  registry.rs  runner.rs  team.rs
src/orchestrator/: client.rs  mod.rs  prompt.rs
src/server/: mod.rs  routes.rs  ws.rs
tests/: auth_test.rs  config_test.rs  orchestrator_test.rs  runner_test.rs  team_test.rs
