[package]
name = "agentboard"
version = "0.1.0"
edition = "2021"
description = "Orchestrate AI coding agents from your phone"
license = "MIT"
repository = "https://github.com/LakshmiSravyaVedantham/agentboard"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = "8"
dotenvy = "0.15"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
shellexpand = "3"
mime_guess = "2"

[dev-dependencies]
axum-test = "16"
tempfile = "3"
